# esp32-sim7670g

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  bms.c  bms.h  datalog.c  datalog.h  idf_component.yml  led.c  led.h  modem.c  modem.h  mqtt.c  mqtt.h  ota.c  ota.h  sdcard.c  sdcard.h  timesync.c  timesync.h  webui.c  webui.h  wifi.c  wifi.h
main/www/: index.html
tools/: release.sh
